k8s_yaml/flask-api.yaml
# deployment for Flask API

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: flask-api-pod
      labels:
        app: backend
    spec:
      containers:
        - name: flask-api-container
          image: flask-api
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
      #     volumeMounts:
      #       - name: model-volume
      #         mountPath: /mnt/models
      # volumes:
      #   - name: model-volume

---
#service for Flask API

apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
